feat: upgrade @pintora/cli and add it as peerDependencies

--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "url": "https://github.com/hikerpig/gatsby-remark-pintora.git"
   },
   "dependencies": {
-    "@pintora/cli": "^0.1.0-alpha.13",
     "unist-util-visit": "^2"
+  },
+  "devDependencies": {
+    "@pintora/cli": "^0.1.0-alpha.27"
+  },
+  "peerDependencies": {
+    "@pintora/cli": "^0.1.0-alpha.27"
   }
 }
