--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "unist-util-visit": "^2"
   },
   "devDependencies": {
-    "@pintora/cli": "^0.1.0-alpha.27"
+    "@pintora/cli": "^0.2.0"
   },
   "peerDependencies": {
-    "@pintora/cli": "^0.1.0-alpha.27"
+    "@pintora/cli": "^0.2.0"
   }
 }
